reduce the number of black and grays on the site from 11 to 6

--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -8,18 +8,13 @@ $hover-green = #d9ebb3
 
 $hover-red = #CC2828
 
-$node-gray = #333
-$dark-gray = #666
+$light-gray3 = #f0f0f0
+$light-gray2 = #ccc
 $light-gray = #999
-$gray1 = #ccc
-$gray2 = #c0c0c0
-$gray3 = #ddd
-$gray4 = #eee
-$gray5 = #f0f0f0
+$gray = #666
+$node-gray = #333
 
 $black = #000
-$black2 = #222
-$black3 = #404042
 
 padded-link($padding)
     padding-left $padding
