--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -55,7 +55,7 @@ img
 
 
 code
-    background-color $gray5
+    background-color $light-gray3
     font-size 85%
     padding 0.2em
 
@@ -65,10 +65,10 @@ pre
     padding 0.75em 1.2em
     font-size 0.8em
     white-space pre-wrap
-    color $gray5
+    color $light-gray3
 
     code
-        color $gray5
+        color $light-gray3
         background-color inherit
 
 // Import specific page sections and layout parts
@@ -157,7 +157,7 @@ pre
     padding 0
 
 .highlight-box
-    background-color $gray5
+    background-color $light-gray3
     padding 5px 15px
     border-radius 2px
     margin-top 1em
