--- a/layouts/css/page-modules/_anchorLinks.styl
+++ b/layouts/css/page-modules/_anchorLinks.styl
@@ -1,13 +1,13 @@
 // Anchor links for page headings
 .anchor
-    color $gray1
+    color $light-gray2
     background none
     padding 0 .25em
 
     &:link
     &:active
     &:hover
-        color $gray1
+        color $light-gray2
         background inherit
 
 
