--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -48,7 +48,7 @@
 
 
     a:hover, a:active
-        background $dark-gray
+        background $gray
         color $node-green
 
 .download-version-toggle
@@ -64,7 +64,7 @@
 
     a:hover, a:active, a.is-version
         color $node-green
-        background $dark-gray
+        background $gray
 
     a.is-version
         color $light-green
@@ -85,7 +85,7 @@
         width 33%
 
     td
-        border 1px solid $gray2
+        border 1px solid $light-gray2
 
         a,
         span
@@ -96,7 +96,7 @@
             text-align center
 
         a:hover, a:active
-            background $dark-gray
+            background $gray
             color $node-green
 
 h5.download-table-previous-releases-header
@@ -104,7 +104,7 @@ h5.download-table-previous-releases-header
 
 .download-table
     font-size small
-    border 1px solid $gray2
+    border 1px solid $light-gray2
 
     td
         padding 5px
@@ -114,10 +114,10 @@ h5.download-table-previous-releases-header
 
     > tbody
         td
-            border-top 1px solid $gray2
+            border-top 1px solid $light-gray2
 
         tr:nth-child(odd)
-            background-color $gray4
+            background-color $light-gray3
 
         tr:nth-child(even)
             background-color $white
