--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -1,7 +1,7 @@
 .home-version
     padding-top 10px
     font-size 16px
-    color $dark-gray
+    color $gray
 
 .home-version-banner
     color $node-gray
