--- a/layouts/css/page-modules/_linuxfoundation.styl
+++ b/layouts/css/page-modules/_linuxfoundation.styl
@@ -3,7 +3,7 @@
     padding 1em 20px
     font-size 14px
     color $white
-    background $black3
+    background $node-gray
 
     p + p
         margin-top 0
