--- a/layouts/css/page-modules/_header.styl
+++ b/layouts/css/page-modules/_header.styl
@@ -15,7 +15,7 @@ header
             padding 0 8px
             text-transform uppercase
             font-size 14px
-            color $gray1 !important
+            color $light-gray2 !important
 
         a:hover
             background-color transparent
