--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -15,7 +15,7 @@
     $home-secondary-links-color = saturation($node-green, 20%)
 
     color $home-secondary-links-color
-    font-size 1rem
+    font-size 0.9rem
 
     a
         color $home-secondary-links-color
@@ -27,14 +27,18 @@
 #home-intro
     max-width: $body-max-width * 0.75
     margin 0 auto
-    padding-top 30px
+    padding 30px 0
     text-align center
 
     h2
         margin-bottom 0
 
-.home-downloadbutton
+.home-downloadblock
     display inline-block
+    margin 0 8px
+
+.home-downloadbutton
+    display block
     margin 10px 4px
     padding 0.2em 0.6em
 
