Use same markup for "In the News" and "Announcements"

--- a/layouts/announcements.hbs
+++ b/layouts/announcements.hbs
@@ -29,9 +29,9 @@
             </aside>
 
             <article>
-                <div class="container">
+                <div class="container no-headline">
 
-                    <ul class="blog-index">
+                    <ul class="news-list">
                         {{#each collections.blogAnnounce}}
                             {{#if title}}
                                 <li>
