--- a/layouts/css/layout/_grid.styl
+++ b/layouts/css/layout/_grid.styl
@@ -4,6 +4,9 @@
     margin 0 auto
     overflow hidden
 
+    &.no-headline
+        margin-top 0.5em
+
 .row
     display flex
     flex-direction row
