--- a/layouts/css/page-modules/_in-the-news.styl
+++ b/layouts/css/page-modules/_in-the-news.styl
@@ -1,5 +1,21 @@
-#news-container
-    margin-top 50px
+.news-list
+    @media screen and (max-width: 480px)
+        margin-left -2.5em
+        margin-right 1em
 
-    .news-row
-        padding 5px
+    li
+        display flex
+
+        @media screen and (max-width: 799px)
+            display block
+            margin-bottom 0.5em
+
+    time
+        margin-right 1em
+        color $light-gray
+        white-space nowrap
+        // Fix min-width in Safari
+        flex-shrink 0
+
+        @media screen and (max-width: 799px)
+            display block
