--- a/layouts/in-the-news.hbs
+++ b/layouts/in-the-news.hbs
@@ -31,8 +31,10 @@
             {{{ contents }}}
 
             <article>
-              <div id="news-container">
-              </div>
+                <div class="container no-headline">
+                    <ul class="news-list">
+                    </ul>
+                </div>
             </article>
 
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.4.2/tabletop.min.js"></script>
@@ -45,12 +47,13 @@
 
                 function showInfo(data, tabletop) {
                   data.reverse()
-                  var html = '<div id="news-list">'
+                  var html = ''
+                  var list = document.getElementsByClassName('news-list')
+
                   data.forEach(function (row) {
-                    html += '<div class="news-row"><a href="'+row.Link+'">'+row.Title+'</a></div>'
+                    html += '<li><a href="'+row.Link+'">'+row.Title+'</a></li>'
                   })
-                  html += '</div>'
-                  document.getElementById('news-container').innerHTML = html
+                  if (list && list[0]) list[0].innerHTML = html
                 }
               }
             </script>
