Rename 'Stable' release to 'Current' (#672)
* Rename 'Stable' release to 'Current'

* build: Fix crash when changing files during serve

* Rename 'Stable' release to 'Current': old releases also renamed

* Rename 'Stable' release to 'Current': Update Korean translation

* Rename 'Stable' release to 'Current': Update v4.x/5.x release posts

* Rename 'Stable' release to 'Current': Update weekly update posts

--- a/layouts/download-current.hbs
+++ b/layouts/download-current.hbs
@@ -12,8 +12,8 @@
                     <h1>{{downloads.headline}}</h1>
                 </div>
 
-                {{> primary-download-matrix version=project.currentVersions.stable versionTypeStable="true"}}
-                {{> secondary-download-matrix version=project.currentVersions.stable versionTypeStable="true"}}
+                {{> primary-download-matrix version=project.currentVersions.current versionTypeCurrent="true"}}
+                {{> secondary-download-matrix version=project.currentVersions.current versionTypeCurrent="true"}}
 
             </article>
 
