--- a/layouts/blog-index.hbs
+++ b/layouts/blog-index.hbs
@@ -11,18 +11,18 @@
 
       <ul class="blog-index">
         {{#each pagination.posts}}
-        <li>
-          <time datetime="{{ post.date }}">{{ strftime post.date "%d %b" }}</time>
-          <a href="/{{ ../site.locale }}/{{ post.path }}/">{{ post.title }}</a>
+          <li>
+            <time datetime="{{ post.date }}">{{ strftime post.date "%d %b" }}</time>
+            <a href="/{{ ../site.locale }}/{{ post.path }}/">{{ post.title }}</a>
 
-          {{#if displaySummary}}
-          <div class="summary">
-            {{{ summary post.contents ../site.locale post.path }}}
-            <div>
-              {{/if}}
-            </li>
-            {{/each}}
-          </ul>
+            {{#if displaySummary}}
+              <div class="summary">
+                {{{ summary post.contents ../site.locale post.path }}}
+              </div>
+            {{/if}}
+          </li>
+        {{/each}}
+      </ul>
 
           {{#if pagination}}
           <nav class="pagination">
