Show shipped npm version on download page, fixes #731
Exposes versions of node, npm, v8 and openssl for templates.

--- a/layouts/download-current.hbs
+++ b/layouts/download-current.hbs
@@ -12,8 +12,8 @@
           <h1>{{downloads.headline}}</h1>
         </div>
 
-        {{> primary-download-matrix version=project.currentVersions.current versionTypeCurrent="true"}}
-        {{> secondary-download-matrix version=project.currentVersions.current versionTypeCurrent="true"}}
+        {{> primary-download-matrix version=project.latestVersions.current versionTypeCurrent="true"}}
+        {{> secondary-download-matrix version=project.latestVersions.current versionTypeCurrent="true"}}
 
       </article>
 
