--- a/layouts/download.hbs
+++ b/layouts/download.hbs
@@ -12,8 +12,8 @@
           <h1>{{downloads.headline}}</h1>
         </div>
 
-        {{> primary-download-matrix version=project.currentVersions.lts versionTypeLts="true"}}
-        {{> secondary-download-matrix version=project.currentVersions.lts versionTypeLts="true"}}
+        {{> primary-download-matrix version=project.latestVersions.lts versionTypeLts="true"}}
+        {{> secondary-download-matrix version=project.latestVersions.lts versionTypeLts="true"}}
 
       </article>
 
