--- a/layouts/partials/secondary-download-matrix.hbs
+++ b/layouts/partials/secondary-download-matrix.hbs
@@ -4,15 +4,15 @@
     <tbody>
       <tr>
         <th>ARM Binaries (.tar.xz)</th>
-        <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-armv6l.tar.xz">ARMv6</a></td>
-        <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-armv7l.tar.xz">ARMv7</a></td>
-        <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-arm64.tar.xz">ARMv8</a></td>
+        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-armv6l.tar.xz">ARMv6</a></td>
+        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-armv7l.tar.xz">ARMv7</a></td>
+        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-arm64.tar.xz">ARMv8</a></td>
       </tr>
 
       <tr>
         <th>SunOS Binaries (.tar.xz)</th>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-sunos-x86.tar.xz">32-bit</a></td>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-sunos-x64.tar.xz">64-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-sunos-x86.tar.xz">32-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-sunos-x64.tar.xz">64-bit</a></td>
       </tr>
 
       <tr>
@@ -23,7 +23,7 @@
       <tr>
         <th>Linux on Power Systems</th>
         <td colspan="3">
-          <a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-ppc64le.tar.xz">64-bit le</a>
+          <a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-ppc64le.tar.xz">64-bit le</a>
           <span>Official Node.js release</span>
         </td>
         <td colspan="3">
