--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -1,5 +1,5 @@
 <section>
-  <p class="color-lightgray">{{downloads.currentVersion}}: <strong>{{version}}</strong></p>
+  <p class="color-lightgray">{{downloads.currentVersion}}: <strong>{{version.node}}</strong> (includes npm {{version.npm}})</p>
   <p>{{downloads.intro}}</p>
   <div class="download-hero full-width">
     <ul class="no-padding">
@@ -16,24 +16,24 @@
         </div>
       </li>
       <li>
-        <a href="https://nodejs.org/dist/{{version}}/node-{{version}}-x86.msi" id="windows-downloadbutton" data-version="{{version}}">
+        <a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-x86.msi" id="windows-downloadbutton" data-version="{{version.node}}">
           <svg class="download-logo" width="50" height="50" viewBox="0 0 50 50"><path d="M1.589 23.55l-0.017-15.31 18.839-2.558v17.868zM23.55 5.225l25.112-3.654v21.979h-25.112zM48.669 26.69l-0.006 21.979-25.112-3.533v-18.446zM20.41 44.736l-18.824-2.58-0.001-15.466h18.825z"></path></svg>
           Windows Installer
-          <p class="small color-lightgray">node-{{version}}-x86.msi</p>
+          <p class="small color-lightgray">node-{{version.node}}-x86.msi</p>
         </a>
       </li>
       <li>
-        <a href="https://nodejs.org/dist/{{version}}/node-{{version}}.pkg">
+        <a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">
           <svg class="download-logo" width="50" height="50" viewBox="0 0 50 50"><path d="M39.054 34.065q-1.093 3.504-3.448 7.009-3.617 5.495-7.205 5.495-1.374 0-3.925-0.897-2.411-0.897-4.233-0.897-1.71 0-3.981 0.925-2.271 0.953-3.701 0.953-4.261 0-8.439-7.261-4.121-7.317-4.121-14.102 0-6.392 3.168-10.485 3.14-4.037 7.962-4.037 2.019 0 4.962 0.841 2.916 0.841 3.869 0.841 1.262 0 4.009-0.953 2.86-0.953 4.85-0.953 3.336 0 5.972 1.822 1.458 1.009 2.916 2.804-2.215 1.878-3.196 3.308-1.822 2.635-1.822 5.803 0 3.476 1.934 6.252t4.43 3.533zM28.512 1.179q0 1.71-0.813 3.813-0.841 2.103-2.607 3.869-1.514 1.514-3.028 2.019-1.037 0.308-2.916 0.477 0.084-4.177 2.187-7.205 2.075-3 7.009-4.149 0.028 0.084 0.070 0.308t0.070 0.308q0 0.112 0.014 0.28t0.014 0.28z"></path></svg>
           Macintosh Installer
-          <p class="small color-lightgray">node-{{version}}.pkg</p>
+          <p class="small color-lightgray">node-{{version.node}}.pkg</p>
         </a>
       </li>
       <li>
-        <a href="https://nodejs.org/dist/{{version}}/node-{{version}}.tar.gz">
+        <a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.tar.gz">
           <svg class="download-logo" width="50" height="50" viewBox="0 0 50 50"><path d="M25.030 0.934l-24.871 10.716 24.895 10.632 25.152-10.656-25.176-10.691zM26.050 23.62v25.686l24.188-11.483v-24.478l-24.188 10.275zM0.001 37.824l24.27 11.483v-25.686l-24.27-10.275v24.478z"></path></svg>
           Source Code
-          <p class="small color-lightgray">node-{{version}}.tar.gz</p>
+          <p class="small color-lightgray">node-{{version.node}}.tar.gz</p>
         </a>
       </li>
     </ul>
@@ -43,36 +43,36 @@
     <tbody>
       <tr>
         <th>Windows Installer (.msi)</th>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-x86.msi">32-bit</a></td>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-x64.msi">64-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-x86.msi">32-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-x64.msi">64-bit</a></td>
       </tr>
 
       <tr>
         <th>Windows Binary (.exe)</th>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/win-x86/node.exe">32-bit</a></td>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/win-x64/node.exe">64-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/win-x86/node.exe">32-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/win-x64/node.exe">64-bit</a></td>
       </tr>
 
       <tr>
         <th>Mac OS X Installer (.pkg)</th>
-        <td colspan="6"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}.pkg">64-bit</a></td>
+        <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">64-bit</a></td>
       </tr>
 
       <tr>
         <th>Mac OS X Binaries (.tar.gz)</th>
-        <td colspan="6"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-darwin-x64.tar.gz">64-bit</a></td>
+        <td colspan="6"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-darwin-x64.tar.gz">64-bit</a></td>
       </tr>
 
       <tr>
         <th>Linux Binaries (.tar.xz)</th>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-x86.tar.xz">32-bit</a></td>
-        <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-x64.tar.xz">64-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-x86.tar.xz">32-bit</a></td>
+        <td colspan="3"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-x64.tar.xz">64-bit</a></td>
       </tr>
 
       <tr>
         <th>Source Code</th>
         <td colspan="6">
-          <a href="https://nodejs.org/dist/{{version}}/node-{{version}}.tar.gz">node-{{version}}.tar.gz</a>
+          <a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.tar.gz">node-{{version.node}}.tar.gz</a>
         </td>
       </tr>
     </tbody>
