--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -8,7 +8,7 @@
   <div id="main">
     <div class="container">
       <article>
-        <h1>Previous Releases</h1>
+        <h1>{{title}}</h1>
 
         <section>
           {{{ contents }}}
